# susurro

./: .gitignore  Makefile  README.md  download_models.bat  main.py  pyproject.toml  requirements.txt
fine-tuning/: common_voice_13.ipynb  fine-tune.py  requirements.txt  tuning.py
src/: context.py  gui.py  main.py  recorder.py  sussurro.py  transcriber.py
